[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wsgi-kerberos"
dynamic = ["version"]
description = "Kerberos authentication support in WSGI Middleware"
readme = "README.rst"
requires-python = ">=3.8"
license = "BSD-3-Clause"
authors = [
    { name="Michael Komitee", email="mkomitee@gmail.com" },
]
maintainers = [
    { name="Vitaly Shupak", email="vitaly.shupak@deshaw.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "gssapi",
]

[project.urls]
Documentation = "https://github.com/unknown/wsgi-kerberos#readme"
Issues = "https://github.com/deshaw/wsgi-kerberos/issues"
Homepage = "https://github.com/deshaw/wsgi-kerberos"

[tool.hatch.version]
path = "src/wsgi_kerberos/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "k5test",
  "requests",
  "requests-gssapi",
  "wsgi-intercept",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = [
    "3.8",
    "3.9",
    "3.10",
    "3.11",
    "3.12",
]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/wsgi_kerberos tests}"

[tool.coverage.run]
source_pkgs = ["wsgi_kerberos", "tests"]
branch = true
parallel = true
omit = [
  "src/wsgi_kerberos/__about__.py",
]

[tool.coverage.paths]
wsgi_kerberos = ["src/wsgi_kerberos", "*/wsgi-kerberos/src/wsgi_kerberos"]
tests = ["tests", "*/wsgi-kerberos/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
